edit intro in index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Colorization of images using Pix2Pix model in Tensorflow.JS</h1>
         <p>The github repo for this project can be found at: <a href="https://github.com/santhtadi/Colorize-Images-Pix2Pix-using-TensorflowJS" target="_blank">Github</a> </p>
         <h4>Licenses</h4>
-        <p>The Dataset I used is ffhq dataset available at <a href="https://github.com/NVlabs/ffhq-dataset">ffhq-dataset</a></p>
+        <p>The Dataset I used is the ffhq dataset available at <a href="https://github.com/NVlabs/ffhq-dataset">ffhq-dataset</a></p>
         <p>It is available under <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons BY-NC-SA 4.0 license</a></p>
         <div class="row p-4">
             <div class="col-sm-4 p-2">
